<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Individual Practical Assignment</string>
    <string name="quiz_prompt">Select the number that is bigger</string>
    <string name="ready">Lets go!</string>
    <string name="wrongAnswer">Aww this is incorrect. Please try again. You got this!</string>
    <string name="toHome">Back to Home</string>
    <string name="cupcake">🎂</string>
    <string name="lollipop">🍭</string>
    <string name="gif_description">Numbers gif animation playing at the home screen</string>
    <string name="sweet">🍬</string>
</resources>