<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <Button
        android:id="@+id/btn_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toHome"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Drag the Candies Below to Meet the Target" />

    <LinearLayout
        android:id="@+id/candyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/sweet"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/sweet"
            android:textSize="48dp"
             />

        <TextView
            android:id="@+id/lollipop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="48dp"
            android:text="@string/lollipop"
             />

        <TextView
            android:id="@+id/cupcake"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="48dp"
            android:text="@string/cupcake"
             />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drag candies here:"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/dropArea"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/levelDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="16dp">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="Reset"
            android:backgroundTint="@android:color/holo_purple"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/restartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="Restart"
            android:backgroundTint="@android:color/holo_purple"
            android:textColor="@android:color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="Total Value: 0"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/targetNumber"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="Target: 0"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceOfSweet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="Hi"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/priceOfLollipop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize ="25sp"
            android:padding = "10dp"
            android:layout_weight="1"
            android:textColor= "@color/black"
            />

        <TextView
            android:id="@+id/priceOfCupcake"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize ="25sp"
            android:padding = "10dp"
            android:layout_weight="1"
            android:textColor= "@color/black"
            />
    </LinearLayout>


</LinearLayout>
